# tutong-v3

./: .gitignore  CLAUDE.md  README.md  compose.monitoring.yml  compose.override.yml  compose.yml
backend/: pyproject.toml
backend/app/: bot_stop.py  bot_validations.py  crud.py  models.py  notifications.py
backend/app/api/: main.py
backend/scripts/: scan_upbit_bot_risks.py
backend/tests/: conftest.py
bot_engine/: Dockerfile  __init__.py  celery_app.py  pyproject.toml
bot_engine/exchange_adapters/: __init__.py
bot_engine/strategies/: __init__.py  algo_orders.py  rebalancing.py  snowball.py  spot_dca.py  spot_grid.py
bot_engine/tests/: test_crypto.py  test_decimal_utils.py  test_strategies_algo_orders.py  test_strategies_rebalancing.py  test_strategies_snowball.py  test_strategies_spot_dca.py  test_strategies_spot_grid.py  test_workers_base.py
bot_engine/utils/: crypto.py  decimal_utils.py
bot_engine/workers/: algo_orders.py  base.py  rebalancing.py  snowball.py  spot_dca.py  spot_grid.py
docs/: 00_PROJECT_DOCUMENT_GUIDE.md  01_PROJECT_PROPOSAL.md  02_REQUIREMENTS.md  03_SYSTEM_ARCHITECTURE.md  04_TECH_STACK.md  05_UI_DESIGN_SPEC.md  07_DATABASE_DESIGN.md  08_EXTERNAL_API_INTEGRATION.md  09_DEV_GUIDELINES.md  10_WBS_SCHEDULE.md
frontend/: .env  package.json  playwright.local.config.ts
frontend/src/: main.tsx  routeTree.gen.ts
frontend/tests/: auth.setup.ts  login.spec.ts  phase14.integration.spec.ts  reset-password.spec.ts  user-settings.spec.ts
monitoring/loki/: loki.yml  promtail.yml
monitoring/prometheus/: prometheus.yml
(+106 files in other folders)
