[project]
name = "bot-engine"
version = "0.1.0"
description = "AutoTrade Platform Bot Engine (Celery Workers)"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.3",
    "ccxt>=4.0",
    "httpx>=0.27",
    "cryptography>=42.0",
    "apscheduler>=3.10",
    "redis>=5.0",
    "pydantic>=2.0",
    "sqlmodel>=0.0.21",
    "psycopg[binary]>=3.1",
    "python-dotenv>=1.0",
    "tenacity>=8.0",
    # backend 패키지 공유 (모델, 설정 재사용)
    { path = "../backend", editable = true },
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot_engine"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
